--- a/1-data_operations.ipynb
+++ b/1-data_operations.ipynb
@@ -42,13 +42,14 @@
         "id": "qtnPhwRByaLi"
       },
       "source": [
+        "# TEST\n",
         "import requests\n",
         "import pandas\n",
         "from lxml import objectify\n",
         "from urllib.request import urlopen\n",
         "import sys"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
