WIP : Merapikan Catatan

--- a/1_data_operations.ipynb
+++ b/1_data_operations.ipynb
@@ -6,7 +6,7 @@
       "name": "1-data_operations.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOaHMBPbjIkPRHi3ppbbbqw",
+      "authorship_tag": "ABX9TyPEjX9sGFXsKQxWevNlQojI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,26 +26,12 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "GCUXuM1Rw7oB",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "fb3a9f15-195d-4ae2-aab7-1478c87b999d"
+        "id": "MPVsM1C04UpX"
       },
       "source": [
-        "!cat /content/my_data/ex1.csv"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "cat: /content/my_data/ex1.csv: No such file or directory\n"
-          ],
-          "name": "stdout"
-        }
+        "**Perhatian :** Jalankan ini terlebih dahulu untuk menjalankan catatan\n"
       ]
     },
     {
@@ -60,19 +46,17 @@
         "from urllib.request import urlopen\n",
         "import sys"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "t2t2gaqYyyF8"
+        "id": "pSRTSAMN1hNP"
       },
       "source": [
-        "result = requests.get(\"https://raw.githubusercontent.com/wesm/pydata-book/2nd-edition/examples/ex1.csv\");"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "# **Request HTTP**"
+      ]
     },
     {
       "cell_type": "code",
@@ -81,13 +65,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lvXERi2by-nG",
-        "outputId": "9039311d-72e9-4b9d-fbca-c13d5a45dd37"
+        "outputId": "17b89213-6762-49cf-b0b6-024daf69e31f"
       },
       "source": [
-        "print(result.text)\n",
-        "type(result)"
+        "result = requests.get(\"https://raw.githubusercontent.com/wesm/pydata-book/2nd-edition/examples/ex1.csv\")\n",
+        "type(result)\n",
+        "print(result.text)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,19 +83,46 @@
             "9,10,11,12,foo\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "requests.models.Response"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 25
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EiecwuZQ14lI"
+      },
+      "source": [
+        "# **Mengolah Data dengan Panda**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ux4ppjIy5Xfz"
+      },
+      "source": [
+        "Pertama pastikan kamu punya sumber data dan pastikan bisa di akses, data yang bisa di ambil oleh pandas adalah http dan local file langsung"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZE_NXSrp4uWN"
+      },
+      "source": [
+        "source_address = \"https://raw.githubusercontent.com/wesm/pydata-book/2nd-edition/examples/ex1.csv\"\n",
+        "# source_address = \"/content/my_data/ex1.csv\""
+      ],
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aHCjkYXl48x_"
+      },
+      "source": [
+        "Lalu kita perintah pandas untuk baca, pastikan kamu sudah mengetahui sumber datanya, untuk sekarang kita menggunakan format csv"
       ]
     },
     {
@@ -120,13 +132,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vu4O6ldOz0mS",
-        "outputId": "b9627d4d-1cd8-487c-c31f-54ea6369dd73"
+        "outputId": "339913a8-7be9-4316-cfc5-6cf476553492"
       },
       "source": [
-        "data = pandas.read_csv(\"https://raw.githubusercontent.com/wesm/pydata-book/2nd-edition/examples/ex1.csv\");\n",
-        "print(data)"
+        "data = pandas.read_csv(source_address)\n",
+        "\n",
+        "print(data)         # Ambil datanya\n",
+        "print(data['a'])    # Akses Arraynya\n",
+        "print(data['a'][1]) # Akses Arraynya lebih dalam"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,8 +150,10 @@
             "0  1   2   3   4   hello\n",
             "1  5   6   7   8   world\n",
             "2  9  10  11  12     foo\n",
-            "\n",
-            "\n",
+            "0    1\n",
+            "1    5\n",
+            "2    9\n",
+            "Name: a, dtype: int64\n",
             "5\n"
           ],
           "name": "stdout"
@@ -144,27 +161,12 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "l47hQ1Vj2ARJ",
-        "outputId": "440ae8e9-c00e-4a47-c2e1-cef8cedd3dab"
+        "id": "Qyr7HRIn58aD"
       },
       "source": [
-        "// Get data as array\n",
-        "print(data['a'][1])"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "5\n"
-          ],
-          "name": "stdout"
-        }
+        "dan readernya punya parameter, ini contoh satu parameter `header`"
       ]
     },
     {
@@ -174,14 +176,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "agSJKCVF2A3w",
-        "outputId": "28ea115c-e7ab-4c70-e32f-dfb1488309c4"
+        "outputId": "6f23c325-c854-4e5c-d453-87bab5741e22"
       },
       "source": [
-        "// gunakan header=None kalau csvnya gk ada header\n",
-        "data2 = pandas.read_csv(\"/content/my_data/ex1.csv\", header=None);\n",
-        "print(data2)"
+        "data = pandas.read_csv(source_address, header=None);\n",
+        "print(data)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,19 +198,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "I5XMFOC66F_l"
+      },
+      "source": [
+        "parameter lainya bernama `names`"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "WJO2rTdR2zla",
-        "outputId": "97f08223-fd4e-418e-950a-699d7ccfe723"
+        "outputId": "0972d0d5-5c51-45f8-98e5-71ca5ecdde34"
       },
       "source": [
-        "data3 = pandas.read_csv(\"/content/my_data/ex1.csv\", names=['field1', '2', 'fld3', '4', 'msg']);\n",
-        "print(data3)"
+        "data = pandas.read_csv(source_address, names=['field1', '2', 'fld3', '4', 'msg']);\n",
+        "print(data)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,20 +235,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4CqzUxCB6fxM"
+      },
+      "source": [
+        "dan coba menggunakan 2 parameter, dan sekalian test parameter `index_col`"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cKiMvwwU4MVB",
-        "outputId": "f61932c4-ba8c-4780-c0e9-5a07e03f4815"
+        "outputId": "213871fa-6563-4051-f750-4f81ed392507"
       },
       "source": [
-        "data4 = pandas.read_csv(\"/content/my_data/ex1.csv\", names=['field1', '2', 'fld3', '4', 'msg'], index_col='msg');\n",
-        "print(data4)\n",
-        "print(\"Filed Selected = \" + data4['fld3']['hello'])"
+        "data = pandas.read_csv(source_address, names=['field1', '2', 'fld3', '4', 'msg'], index_col='msg');\n",
+        "print(data)\n",
+        "print(\"Filed Selected = \" + data['fld3']['hello'])"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,19 +275,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-PAlpzmt6woq"
+      },
+      "source": [
+        "boleh juga untuk menggunakan fungsi reader lain, seperi `reader_table` dan sekalian coba parameter `sep` dengan kepanjangan `sep`nya adalah separator"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xo0hNxrh5fvR",
-        "outputId": "78fe961e-58c8-4ae2-ab80-0aa10c57d4e8"
+        "outputId": "b03975f7-9278-486e-c89a-6053b0f36b5d"
       },
       "source": [
-        "data5 = pandas.read_table(\"/content/my_data/ex1.csv\", sep=\",\");\n",
-        "print(data5)"
+        "data = pandas.read_table(source_address, sep=\",\");\n",
+        "print(data)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,21 +311,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mTAV6oHM7dIU"
+      },
+      "source": [
+        "read table dipakai untuk format teks dan format gak umum lainya"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xE1_BAV85v8E",
-        "outputId": "cdfe53b5-8ae3-4dad-da54-4ba842fd51c4"
+        "outputId": "e5f4609e-e34f-4e86-ef2f-a044c828ce9c"
       },
       "source": [
-        "list(open(\"/content/my_data/ex3.txt\"))\n",
-        "\n",
-        "data6 = pandas.read_table(\"/content/my_data/ex3.txt\", sep='\\s+')\n",
-        "print(data6)"
+        "data = pandas.read_table(\"https://raw.githubusercontent.com/wesm/pydata-book/2nd-edition/examples/ex3.txt\", sep='\\s+')\n",
+        "print(data)"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
